<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#211D44">

    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buy" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemName"
        style="@style/titleStyle"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/itemIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemQuantity"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/itemIcon"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <TextView
        android:id="@+id/itemSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemSize"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemQty" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/itemSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bought"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/itemDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemSize" />

</androidx.constraintlayout.widget.ConstraintLayout>